--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
       <artifactId>postgresql</artifactId>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>2.6.5</version>
+    </dependency>
   </dependencies>
 
   <build>
