--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
       <artifactId>jackson-datatype-jsr310</artifactId>
       <version>2.9.8</version>
     </dependency>
+    <dependency>
+      <groupId>org.awaitility</groupId>
+      <artifactId>awaitility</artifactId>
+      <version>3.1.2</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
