refactor: updated business logic layer

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,9 @@
 spring:
   jpa:
     show-sql: true
+    hibernate:
+      ddl-auto: create-drop
+  datasource:
+    username: postgres
+    password: postgres
+    url: jdbc:postgresql://localhost:5432/db
